--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     <div class="objective">
         <h3 >&nbsp;&nbsp;OBJECTIVE</h3>
-        <p class="obj">To work  in a firm with a professional work driven enviorment where i can  utilise and apply  my knowledge ,skills which would enable me as <br> a graduateto grow while filfilling organizational goals.</p>
+        <p class="obj">To work  in a firm with a professional work driven enviorment where i can  utilise and apply  my knowledge ,skills which would enable me as <br> a graduateto grow while fulfilling organizational goals.</p>
     </div>
     <div class="education">
         <h3 >&nbsp;&nbsp;ACADEMIC QUALIFICATION</h3>
